styles.css
/* ... */
.nav__link--primary:hover {
  background-color: #4c00e1;
  color: #fff;
}

.nav__link--primary:after {
  content: "";
  visibility: hidden;
}

/* 

BURGER BUTTON

*/

button {
  background-color: transparent;
  -webkit-tap-highlight-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.button__container {
  display: none;
  position: relative;
  width: 30px;
  height: 30px;
  z-index: 100;
}

.burger__inner {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 30px;
}

.menu--open .burger__inner {
  justify-content: center;
}

.burger__btn,
.close__btn {
  position: absolute;
  top: 0;
  left: 0;
}

.burger__btn {
  visibility: visible;
}

.menu--open .button__container {
  position: fixed;
  right: 32px;
}

.menu--open .burger__btn {
  visibility: hidden;
}

.close__btn {
  visibility: hidden;
}

.menu--open .close__btn {
  visibility: visible;
}

/* 

BURGER INGREDIENTS

*/

.ingredient__container {
  position: relative;
  height: calc(100% / 3);
}

.top-bun,
.patty,
.bottom-bun {
  position: absolute;
  background-color: #1a202c;
  width: 100%;
  height: 30%;
  top: 50%;
  transform: translateY(-50%);
  border-radius: 100px;
  transition: background-color 300ms ease;
}

.burger:hover .top-bun,
.burger:hover .patty,
.burger:hover .bottom-bun {
  background-color: #6415ff;
}

.top-bun,
.bottom-bun {
  left: 0;
}

.top {
  transform: translateY(0) rotate(0);
  transition: transform 300ms ease;
  will-change: transform;
}

.menu--open .top {
  transform: translateY(100%) rotate(-225deg);
}

.patty {
  right: 0;
  opacity: 1;
  transition: width 200ms ease-out, opacity 30ms ease-out 45ms,
    background-color 300ms ease;
  will-change: width;
}

.menu--open .patty {
  width: 0;
  opacity: 0;
  transition: width 200ms ease-out, opacity 30ms ease-in 45ms;
}

.bottom {
  transform: translateY(0) rotate(0);
  transition: transform 300ms ease;
  will-change: transform;
}

.menu--open .bottom {
  transform: translateY(-100%) rotate(225deg);
}

/* 

MODAL 

*/

.modal {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 378px;
  margin: 24px 16px;
  padding: 32px;
  background-color: #fff;
  border: 1px solid rgb(229, 231, 235);
  border-radius: 8px;
  z-index: 10;
  transform: translateX(300%);
  transition: transform 300ms;
}

.modal__links {
  width: 100%;
  height: 100%;
  padding-bottom: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.modal__link {
  font-size: 18px;
  font-weight: 600;
  line-height: 1.5;
  margin: 12px 0;
  color: #1a202c;
}

.modal__link--primary {
  color: #f7fafc;
  background-color: #6415ff;
  padding: 8px 28px;
  border-radius: 500px;
  transition: background-color 300ms ease;
}

.modal__link--primary:hover {
  background-color: #4c00e1;
}

.menu--open .modal {
  transform: translateX(0);
}

/*

HEADER

*/

header {
  position: relative;
}

header .row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header__description {
  width: 41.6667%;
  display: flex;
  flex-direction: column;
}

.header__img--wrapper {
  width: calc(100% - 41.6667%);
}

.header__img {
  width: 100%;
  max-width: 768px;
}

.header__description--para {
  margin: 24px 0 32px 0;
}

.header__email {
  width: 100%;
  max-width: 448px;
  height: 68px;
  position: relative;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.header__email--input {
  width: 100%;
  border-radius: 999px;
  border: 2px solid rgb(229, 231, 235);
  padding: 20px 192px 20px 32px;
  font-size: 16px;
  color: #243e63;
  font-weight: 500;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 1;
  transition: border-color 300ms;
}

.header__email--input::placeholder {
  color: rgb(158, 170, 189);
}

.header__email--input:hover {
  border-color: rgb(160, 174, 192);
}

.header__email--input:focus,
.header__email--input:active {
  outline: transparent 2px;
  outline-offset: 2px;
  border-color: #6415ff;
}

.header__email--btn {
  z-index: 2;
  margin: 8px;
  width: 160px;
  height: calc(100% - 16px);
  border-radius: 999px;
  background-color: #6415ff;
  color: #fff;
  font-size: 16px;
  font-weight: 700;
  transition: background-color 300ms ease;
}

.header__email--btn:hover {
  background-color: #4c00e1;
}

.header__customers--title {
  margin-top: 80px;
  padding-left: 2px;
  font-size: 12px;
  color: #a9abaa;
  font-weight: 700;
  letter-spacing: 1px;
}

.header__customers {
  margin-top: 16px;
  padding-right: 128px;
  opacity: 0.5;
}

.header__blob {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 256px;
  height: 256px;
  transform: matrix(1, 0, 0, 1, -163, 0);
  z-index: -1;
}

/* 

FEATURES 

*/

#features {
  position: relative;
}

#features .row__narrow {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#features .section__para {
  text-align: center;
  max-width: 568px;
}

.features {
  display: flex;
  flex-wrap: wrap;
  margin-top: 40px;
}

.feature {
  width: calc(100% / 3);
}

.feature__row {
  display: flex;
  align-items: flex-start;
  padding: 32px 24px;
}

.feature__img--wrapper {
  display: flex;
  padding: 20px;
  border: 1px solid #e5e7eb;
  border-radius: 500px;
}

.feature__img {
  width: 24px;
  height: 24px;
}

.feature__text {
  margin-top: 8px;
  margin-left: 16px;
}

.feature__title {
  font-size: 24px;
}

.feature__para {
  margin-top: 16px;
  font-size: 16px;
  max-width: calc(634px / 3);
  color: #7c8ba1;
  line-height: 2;
  font-weight: 500;
}

.features__blob {
  transform: translateX(104px) translateY(192px) scaleX(1) scaleY(0.9);
  position: absolute;
  right: 0;
  bottom: 0;
  opacity: 0.25;
  width: 16rem;
  z-index: -1;
}

/* 

QUALITY 

*/

#quality .row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.quality__description,
.quality__img--wrapper {
  width: 50%;
}
/* ... */

